--- a/index.html
+++ b/index.html
@@ -15,18 +15,87 @@
 <body>
     <section class="banner">
         <div class="banner-texts">
-            <h1>Stay Focused on <br> <span class="orange-color">Mission 2022</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eos mollitia, id accusantium eius quod odit
-                eum architecto, commodi, ex possi
-            </p>
-            <a href="https://github.com/ProgrammingHero1/mission-2022">Explore Now</a> <br> <br>
+            <div>
+                <div class="border"></div>
+                <h1>Stay Focused on <span class="orange-color">Mission 2022</span></h1>
+            </div>
+            <p>A brand new year has already started. It's the time to start everything with new enthusiasm. And the
+                all it needs is a firm mission. Here we are sharing our mission for 2022 with you.
+            </p> <br>
+            <a class="button" href="https://github.com/ProgrammingHero1/mission-2022">Explore Now</a> <br> <br>
             <p class="small">Scroll down to explore more about us</p>
         </div>
         <div class="banner-image">
             <img src="images/person/person-2.png" alt="">
         </div>
-
     </section>
+
+    <section class="my-mission">
+        <h1>My Mission in <span class="orange-color">2022</span></h1>
+        <div class="mission-boxes">
+            <div class="box-parts box-one">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h2>Mission</h2>
+                <p>We have started the year with HTML & CSS, the mission is to get introduced with JavaScript and other
+                    knowledges to be a web developer. </p>
+            </div>
+            <div class="box-parts box-two">
+                <img src="images/illustrators/illustrator-2.png" alt="">
+                <h2>Vission</h2>
+                <p>Being a web developer is not easy, it needs hardwork & dedication. </p>
+            </div>
+            <div class="box-parts box-three">
+                <img src="images/illustrators/illustrator-3.png" alt="">
+                <h2>Goals</h2>
+                <p>We have to be a well skilled web developer by 2022. Not only that, We will be working on
+                    self-improvement. </p>
+            </div>
+        </div>
+    </section>
+    <section class="sec-3">
+        <img class="bg-1" src="images/shapes/shape-1.png" alt="">
+        <div class="sec-3-part minus-margin">
+            <img src="images/pictures/coding.png" alt="">
+            <div class="extra-style1">
+                <h3> Develop <br> Without Limits</h3>
+                <p>Learning is a process, we should not set any limit on that. Learn as much skills as you can. We are
+                    here together and helping each other, so limit is not an important word here. </p>
+                <br>
+                <a class="button" href="https://github.com/ProgrammingHero1/mission-2022"><small>Read The
+                        Documentation</small></a>
+            </div>
+
+        </div>
+        <img class="bg-2" src="images/shapes/shape-1.png" alt="">
+        <div class="sec-3-part minus-margin-1">
+            <div class="extra-style2">
+                <h3> Know Our <br> Global Community</h3>
+                <p>Don't think that you are alone here, we are so many people learning and teaching, and our community
+                    is large, worldwide. Remember that you are an important part of our global community.</p> <br>
+                <a class="button" href="https://github.com/ProgrammingHero1/mission-2022"><small>Read The
+                        Documentation</small></a>
+            </div>
+            <img src="images/pictures/project.png" alt="">
+        </div>
+    </section>
+    <section class="about-you">
+        <h1>What About You <span class="orange-color">?</span></h1>
+        <p>What's your Mission for 2022? What's your determination? <br> Do they match with ours? You can share with
+            us. <br> Just send us an email!
+        </p>
+        <p>
+            <b>Phone:</b> xxxxx-xxxxxx <br>
+            <b>Email:</b> aaaabb11@gmail.com <br>
+            <b>Website:</b> <a href="">mission2022.com</a>
+        </p>
+        <h3>Or Join With Us</h3>
+        <p>Enter your email ID: <input type="email" placeholder="email ID"></p>
+    </section>
+    <footer>
+        <p class="footer-line-1">Mission <span class="orange-color">2022</span></p>
+        <small>Hardwork, Perseverance and Determination for 2022</small>
+
+    </footer>
 
 </body>
 
