--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="border"></div>
                 <h1>Stay Focused on <span class="orange-color">Mission 2022</span></h1>
             </div>
-            <p>A brand new year has already started. It's the time to start everything with new enthusiasm. And the
+            <p>A brand new year has already started. It's the time to start everything with new enthusiasm. And
                 all it needs is a firm mission. Here we are sharing our mission for 2022 with you.
             </p> <br>
             <a class="button" href="https://github.com/ProgrammingHero1/mission-2022">Explore Now</a> <br> <br>
